@@ -14,7 +14,9 @@ import mcjty.lostcities.worldgen.lost.BuildingInfo;
 import mcjty.lostcities.worldgen.lost.cityassets.*;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.Commands;
+import net.minecraft.commands.arguments.ResourceLocationArgument;
 import net.minecraft.core.BlockPos;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.level.ChunkPos;
@@ -32,7 +34,7 @@ public class CommandCreateBuilding implements Command<CommandSourceStack> {
     public static ArgumentBuilder<CommandSourceStack, ?> register(CommandDispatcher<CommandSourceStack> dispatcher) {
         return Commands.literal("createbuilding")
                 .requires(cs -> cs.hasPermission(1))
-                .then(Commands.argument("name", StringArgumentType.word())
+                .then(Commands.argument("name", BuildingArgumentType.building())
                         .then(Commands.argument("floors", IntegerArgumentType.integer(1, 20))
                                 .then(Commands.argument("cellars", IntegerArgumentType.integer(0, 10)).executes(CMD))));
     }
@@ -40,7 +42,7 @@ public class CommandCreateBuilding implements Command<CommandSourceStack> {
 
     @Override
     public int run(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
-        String name = context.getArgument("name", String.class);
+        ResourceLocation name = context.getArgument("name", ResourceLocation.class);
         Integer floors = context.getArgument("floors", Integer.class);
         Integer cellars = context.getArgument("cellars", Integer.class);
         Building building = AssetRegistries.BUILDINGS.get(context.getSource().getLevel(), name);
