@@ -2,8 +2,13 @@ package mcjty.lostcities.setup;
 
 
 import mcjty.lostcities.LostCities;
+import mcjty.lostcities.commands.BuildingArgumentType;
+import mcjty.lostcities.commands.PartArgumentType;
 import mcjty.lostcities.worldgen.LostCityFeature;
 import mcjty.lostcities.worldgen.LostCitySphereFeature;
+import net.minecraft.commands.synchronization.ArgumentTypeInfo;
+import net.minecraft.commands.synchronization.ArgumentTypeInfos;
+import net.minecraft.commands.synchronization.SingletonArgumentInfo;
 import net.minecraft.core.Registry;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
@@ -17,6 +22,7 @@ import net.minecraft.world.level.levelgen.placement.PlacedFeature;
 import net.minecraftforge.eventbus.api.IEventBus;
 import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
 import net.minecraftforge.registries.DeferredRegister;
+import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
 
 import java.util.List;
@@ -26,12 +32,14 @@ public class Registration {
     public static final DeferredRegister<Feature<?>> FEATURES = DeferredRegister.create(Registry.FEATURE_REGISTRY, LostCities.MODID);
     public static final DeferredRegister<ConfiguredFeature<?,?>> CONFIGURED_FEATURES = DeferredRegister.create(Registry.CONFIGURED_FEATURE_REGISTRY, LostCities.MODID);
     public static final DeferredRegister<PlacedFeature> PLACED_FEATURES = DeferredRegister.create(Registry.PLACED_FEATURE_REGISTRY, LostCities.MODID);
+    public static final DeferredRegister<ArgumentTypeInfo<?, ?>> ARGUMENT_TYPES = DeferredRegister.create(ForgeRegistries.COMMAND_ARGUMENT_TYPES, LostCities.MODID);
 
     public static void init() {
         IEventBus bus = FMLJavaModLoadingContext.get().getModEventBus();
         FEATURES.register(bus);
         CONFIGURED_FEATURES.register(bus);
         PLACED_FEATURES.register(bus);
+        ARGUMENT_TYPES.register(bus);
     }
 
     public static final RegistryObject<LostCityFeature> LOSTCITY_FEATURE = FEATURES.register("lostcity", LostCityFeature::new);
@@ -46,6 +54,13 @@ public class Registration {
             "spheres", () -> new ConfiguredFeature<>(LOSTCITY_SPHERE_FEATURE.get(), FeatureConfiguration.NONE));
     public static final RegistryObject<PlacedFeature> PLACED_LOSTCITY_SPHERE_FEATURE = PLACED_FEATURES.register(
             "spheres", () -> new PlacedFeature(CONFIGURED_LOSTCITY_SPHERE_FEATURE.getHolder().get(), List.of(CountPlacement.of(1))));
+
+    public static final RegistryObject<ArgumentTypeInfo<?, ?>> BUILDING_ARGUMENT_TYPE = ARGUMENT_TYPES.register("building_argument_type",
+            () -> ArgumentTypeInfos.registerByClass(BuildingArgumentType.class,
+                    SingletonArgumentInfo.contextFree(BuildingArgumentType::building)));
+    public static final RegistryObject<ArgumentTypeInfo<?, ?>> PART_ARGUMENT_TYPE = ARGUMENT_TYPES.register("part_argument_type",
+            () -> ArgumentTypeInfos.registerByClass(PartArgumentType.class,
+                    SingletonArgumentInfo.contextFree(PartArgumentType::part)));
 
     public static final ResourceLocation LOSTCITY = new ResourceLocation(LostCities.MODID, "lostcity");
 
